--- a/packages/select-text/package.json
+++ b/packages/select-text/package.json
@@ -11,7 +11,7 @@
     "@pie-lib/correct-answer-toggle": "2.0.9",
     "@pie-lib/render-ui": "^2.0.10",
     "@pie-lib/text-select": "^1.1.0",
-    "material-ui": "1.0.0-beta.44",
+    "material-ui": "^1.0.0-beta.44",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
