--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -4,8 +4,7 @@
     "access": "public"
   },
   "version": "1.0.1",
-  "description":
-    "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
+  "description": "An interaction to allow students identify coordinates or plot points on a graph by clicking on the graph.",
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.43",
