--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
   "env": {
     "browser": true,
     "commonjs": true,
@@ -18,26 +15,23 @@
     "sourceType": "module"
   },
   "rules": {
-    "quotes": [
-      "warn",
-      "single"
-    ],
+    "quotes": ["error", "single"],
     "strict": 0,
-    "react/prop-types": "warn",
-    "react/jsx-no-duplicate-props": "warn",
-    "react/no-deprecated": "warn",
-    "react/display-name": "warn",
-    "no-extra-semi": "warn",
-    "no-dupe-keys": "warn",
-    "no-const-assign": "warn",
-    "no-this-before-super": "warn",
-    "no-undef": "warn",
-    "no-unreachable": "warn",
-    "no-unused-vars": "warn",
+    "react/prop-types": "error",
+    "react/jsx-no-duplicate-props": "error",
+    "react/no-deprecated": "error",
+    "react/display-name": "error",
+    "no-extra-semi": "error",
+    "no-dupe-keys": "error",
+    "no-const-assign": "error",
+    "no-this-before-super": "error",
+    "no-undef": "error",
+    "no-unreachable": "error",
+    "no-unused-vars": "error",
     "jsx-uses-vars": true,
-    "constructor-super": "warn",
-    "valid-typeof": "warn",
-    "no-case-declarations": "warn",
-    "no-console": "warn"
+    "constructor-super": "error",
+    "valid-typeof": "error",
+    "no-case-declarations": "error",
+    "no-console": "error"
   }
 }
