--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "lerna run install",
     "test": "jest",
     "release":
-      "npm test && npm run build && lerna publish --conventional-commits",
+      "npm run clean && npm test && npm run build && lerna publish --conventional-commits",
     "lint":
       "lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/eslint  --ignore-path \\$LERNA_ROOT_PATH/.eslintignore --ext .js --ext .jsx src",
     "clean": "lerna exec -- rm -fr lib",
