--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -10,14 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "react-dnd": "^3.0.0",
-    "material-ui": "^1.0.0-beta.47"
+    "react-dnd-html5-backend": "^2.6.0",
+    "material-ui": "^1.0.0-beta.47",
+    "@pie-lib/drag": "^0.1.0",
+    "@pie-lib/correct-answer-toggle": "^2.0.10"
   },
   "peerDependencies": {
     "react": "^16.3.2"
   },
   "devDependencies": {
-    "react": "^16.3.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1"
+    "react": "^16.3.2"
   }
 }
