--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/categorize",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/index.js",
   "publishConfig": {
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react-dnd": "^3.0.0",
-    "react-dnd-html5-backend": "^2.6.0",
-    "material-ui": "^1.0.0-beta.47",
+    "@pie-lib/correct-answer-toggle": "^2.0.10",
     "@pie-lib/drag": "^0.1.0",
-    "@pie-lib/correct-answer-toggle": "^2.0.10"
+    "material-ui": "^1.0.0-beta.47",
+    "react-dnd": "^3.0.0",
+    "react-dnd-html5-backend": "^2.6.0"
   },
   "peerDependencies": {
     "react": "^16.3.2"
