--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -3,7 +3,9 @@
   "version": "4.1.0",
   "main": "lib/index.js",
   "description": "A pie placement component",
-  "keywords": ["pie"],
+  "keywords": [
+    "pie"
+  ],
   "repository": "pie-framework/pie-ui",
   "publishConfig": {
     "access": "public"
@@ -13,8 +15,8 @@
   },
   "dependencies": {
     "@pie-lib/correct-answer-toggle": "^2.0.10",
-    "@pie-lib/render-ui": "^2.0.11",
     "@pie-lib/drag": "^0.1.0",
+    "@pie-lib/render-ui": "^2.0.11",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
     "katex": "^0.9.0",
