--- a/packages/likert-choice/package.json
+++ b/packages/likert-choice/package.json
@@ -10,9 +10,9 @@
   "author": "pie framework developers",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^1.0.0",
     "@pie-framework/pie-player-events": "^0.1.0",
     "classnames": "^2.2.5",
-    "material-ui": "^1.0.0-beta.43",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
