--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^1.0.0",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
-    "@pie-lib/drag": "^0.2.0",
+    "@pie-lib/drag": "^0.3.1",
+    "@pie-lib/categorize": "^0.4.0",
     "react-dnd": "^3.0.0",
     "react-dnd-html5-backend": "^2.6.0"
   },
