--- a/packages/likert-choice/package.json
+++ b/packages/likert-choice/package.json
@@ -13,6 +13,7 @@
     "@material-ui/core": "^1.0.0",
     "@pie-framework/pie-player-events": "^0.1.0",
     "classnames": "^2.2.5",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
