--- a/packages/graph-lines/package.json
+++ b/packages/graph-lines/package.json
@@ -10,8 +10,10 @@
     "@material-ui/core": "^1.0.0-rc.1",
     "@material-ui/icons": "^1.0.0-rc.0",
     "@pie-lib/charting": "^2.2.3",
+    "@pie-lib/config-ui": "^7.1.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
+    "classnames": "^2.2.5",
     "debug": "^3.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
