--- a/packages/graph-lines/package.json
+++ b/packages/graph-lines/package.json
@@ -7,9 +7,9 @@
   "description": "This interaction asks a student to draw a line that meets specific criteria. The student will draw the line by clicking on two points on the graph.",
   "main": "lib/index.js",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
-    "@material-ui/icons": "^1.0.0-rc.0",
-    "@pie-lib/charting": "^2.2.3",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
+    "@pie-lib/charting": "^2.3.1",
     "@pie-lib/config-ui": "^7.1.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
