--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -21,9 +21,9 @@
     "@material-ui/core": "^1.0.0-rc.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
+    "@pie-lib/player-utils": "^0.1.0",
     "debug": "^3.1.0",
     "enzyme-to-json": "^3.3.3",
-    "katex": "^0.9.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
