--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -9,11 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^1.0.0",
+    "@material-ui/core": "^1.4.3",
     "@pie-lib/categorize": "^0.4.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/drag": "^1.1.0",
     "@pie-lib/player-utils": "^0.1.0",
+    "@pie-framework/pie-player-events": "^0.1.0",
     "react-dnd": "^3.0.0",
     "react-dnd-html5-backend": "^2.6.0"
   },
