--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -17,10 +17,10 @@
     "@material-ui/core": "^1.0.0-rc.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/drag": "^1.1.0",
+    "@pie-lib/math-rendering": "^0.5.0",
     "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
-    "katex": "^0.9.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
