--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -21,6 +21,7 @@
     "@pie-lib/render-ui": "^4.2.5",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
+    "katex": "^0.9.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "~16.3.2",
