--- a/packages/placement-ordering/package.json
+++ b/packages/placement-ordering/package.json
@@ -14,10 +14,10 @@
     "test": "./node_modules/.bin/jest"
   },
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.1",
+    "@material-ui/core": "^1.0.0",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/drag": "^1.1.0",
-    "@pie-lib/math-rendering": "^1.0.0",
+    "@pie-lib/math-rendering": "^1.1.0",
     "@pie-lib/render-ui": "^4.2.5",
     "debug": "^3.1.0",
     "decimal.js": "^10.0.0",
