--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
-  "lerna": "2.5.1",
+  "lerna": "3.4.0",
   "packages": [
     "packages/*"
   ],
-  "version": "independent"
+  "version": "independent",
+  "npmClient": "yarn",
+  "useWorkspaces": true  
 }
