--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -8,11 +8,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^1.0.0",
-    "@pie-lib/config-ui": "^7.1.1",
+    "@pie-lib/test-utils": "^0.0.3",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/render-ui": "^2.1.0",
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
