--- a/packages/multiple-choice/package.json
+++ b/packages/multiple-choice/package.json
@@ -24,6 +24,7 @@
     "@pie-lib/render-ui": "^2.1.0",
     "debug": "^3.1.0",
     "enzyme-to-json": "^3.3.3",
+    "classnames": "^2.2.5",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
