--- a/packages/categorize/package.json
+++ b/packages/categorize/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pie-ui/categorize",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "",
   "main": "lib/index.js",
   "publishConfig": {
@@ -15,12 +15,12 @@
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/drag": "^1.1.0",
     "@pie-lib/math-rendering": "^1.0.0",
-    "debug": "^3.1.0",
     "classnames": "^2.2.5",
+    "debug": "^3.1.0",
     "prop-types": "^15.6.1",
-    "react-dom": "^16.3.2",
     "react-dnd": "^3.0.0",
-    "react-dnd-html5-backend": "^2.6.0"
+    "react-dnd-html5-backend": "^2.6.0",
+    "react-dom": "^16.3.2"
   },
   "peerDependencies": {
     "react": "^16.3.2"
