--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
+    "@pie-lib/math-toolbar": "^0.4.0",
     "@pie-lib/render-ui": "^2.1.0",
     "@pie-lib/test-utils": "^0.0.3",
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
+    "mathquill": "git+https://github.com/luxp/mathquill-webpack.git",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
