--- a/packages/math-inline/package.json
+++ b/packages/math-inline/package.json
@@ -10,8 +10,7 @@
     "@material-ui/core": "^3.8.3",
     "@pie-lib/correct-answer-toggle": "^2.1.0",
     "@pie-lib/math-toolbar": "^0.6.2",
-    "@pie-lib/render-ui": "^2.1.0",
-    "@pie-lib/test-utils": "^0.0.3",
+    "@pie-lib/render-ui": "^4.3.1",
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
@@ -19,6 +18,9 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
+  },
+  "devDependencies": {
+    "@pie-lib/test-utils": "^0.0.3"
   },
   "author": "",
   "license": "ISC"
