--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.3",
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.12.4",
     "jest": "^22.4.3",
     "lerna": "^3.4.3",
     "minimist": "^1.2.0",
-    "react": "^16.3.2",
-    "react-dom": "16.3.2"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   },
   "workspaces": [
     "packages/*"
