--- a/packages/calculator/package.json
+++ b/packages/calculator/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^1.0.0-rc.0",
+    "@material-ui/icons": "^3.0.2",
     "@pie-framework/material-ui-calculator": "^3.0.2",
     "classnames": "^2.2.5",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-draggable": "^3.0.5"
   }
 }
