--- a/packages/extended-text-entry/package.json
+++ b/packages/extended-text-entry/package.json
@@ -11,14 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^1.0.0-rc.0",
+    "@material-ui/icons": "^3.0.2",
     "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/editable-html": "^6.1.0",
-    "@pie-lib/render-ui": "^2.1.0",
+    "@pie-lib/editable-html": "^6.16.3",
+    "@pie-lib/render-ui": "^4.3.1",
     "debug": "^3.1.0",
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   }
 }
