--- a/packages/match/package.json
+++ b/packages/match/package.json
@@ -8,15 +8,17 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@pie-lib/correct-answer-toggle": "^2.1.0",
-    "@pie-lib/render-ui": "^2.1.0",
-    "@pie-lib/test-utils": "^0.0.3",
+    "@pie-lib/correct-answer-toggle": "^2.1.2",
+    "@pie-lib/render-ui": "^4.3.1",
     "classnames": "^2.2.5",
     "debug": "^3.1.0",
     "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
+  },
+  "devDependencies": {
+    "@pie-lib/test-utils": "^0.1.1"
   },
   "author": "",
   "license": "ISC"
