--- a/packages/point-intercept/package.json
+++ b/packages/point-intercept/package.json
@@ -8,13 +8,13 @@
   "main": "lib/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^1.0.0-rc.0",
+    "@material-ui/icons": "^3.0.2",
     "@pie-lib/charting": "^2.2.3",
-    "@pie-lib/correct-answer-toggle": "^2.1.0",
-    "@pie-lib/render-ui": "^2.1.0",
+    "@pie-lib/correct-answer-toggle": "^2.1.2",
+    "@pie-lib/render-ui": "^4.3.1",
     "debug": "^3.1.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1"
   },
   "author": "",
   "license": "ISC"
