--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,33 +1,33 @@
 {
   "name": "@pie-ui/demo",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@pie-ui/calculator": "^3.2.1",
-    "@pie-ui/categorize": "^0.7.5",
-    "@pie-ui/extended-text-entry": "^2.3.1",
-    "@pie-ui/fill-in-the-blank": "^1.1.7",
-    "@pie-ui/function-entry": "^3.1.1",
-    "@pie-ui/graph-lines": "^1.0.2",
-    "@pie-ui/inline-choice": "^5.1.1",
-    "@pie-ui/match": "^1.1.2",
+    "@pie-ui/calculator": "^3.3.0",
+    "@pie-ui/categorize": "^0.8.0",
+    "@pie-ui/extended-text-entry": "^2.4.0",
+    "@pie-ui/fill-in-the-blank": "^1.2.0",
+    "@pie-ui/function-entry": "^3.2.0",
+    "@pie-ui/graph-lines": "^1.1.0",
+    "@pie-ui/inline-choice": "^5.2.0",
+    "@pie-ui/match": "^1.2.0",
     "@pie-ui/math-inline": "^0.2.3",
-    "@pie-ui/multiple-choice": "^4.4.3",
-    "@pie-ui/number-line": "^4.1.1",
-    "@pie-ui/placement-ordering": "^4.3.2",
-    "@pie-ui/point-intercept": "^1.1.1",
-    "@pie-ui/protractor": "^2.1.1",
-    "@pie-ui/ruler": "^2.1.0",
-    "@pie-ui/select-text": "^1.2.2",
-    "@pie-ui/text-entry": "^3.3.0",
-    "express": "^4.16.4",
-    "pug": "^2.0.3",
-    "fs-extra": "^7.0.1",
-    "webpack": "^4.29.3",
-    "webpack-dev-middleware": "^3.5.2",
-    "url-loader": "^1.1.2",
+    "@pie-ui/multiple-choice": "^4.5.0",
+    "@pie-ui/number-line": "^4.2.0",
+    "@pie-ui/placement-ordering": "^4.4.0",
+    "@pie-ui/point-intercept": "^1.2.0",
+    "@pie-ui/protractor": "^2.2.0",
+    "@pie-ui/ruler": "^2.2.0",
+    "@pie-ui/select-text": "^1.3.0",
+    "@pie-ui/text-entry": "^3.4.0",
     "css-loader": "^2.1.0",
+    "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "fs-extra": "^7.0.1",
+    "pug": "^2.0.3",
     "style-loader": "^0.23.1",
-    "file-loader": "^3.0.1"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.29.3",
+    "webpack-dev-middleware": "^3.5.2"
   }
 }
