--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "npm run clean && npm run lint && lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/babel --ignore '/__test__/','/__tests__/' src -d lib --copy-files --source-maps"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.0",
     "@pie-framework/build-helper": "^1.0.3",
     "@pie-lib/test-utils": "0.0.3",
     "babel-cli": "^6.26.0",
