--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "jest",
     "release": "npm run clean && npm test && npm run build && lerna publish --conventional-commits",
+    "release:next": "npm run clean && npm test && npm run build && lerna publish --canary --yes --conventional-commits --preid next --dist-tag next",
     "lint": "lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/eslint  --ignore-path \\$LERNA_ROOT_PATH/.eslintignore --ext .js --ext .jsx src",
     "clean": "lerna exec -- rm -fr lib",
     "build": "npm run clean && npm run lint && lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/babel --ignore '/__test__/','/__tests__/' src -d lib --copy-files --source-maps"
