--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 
 stages:
   - test
+  - checker
   - name: release-next
     if: branch = develop
 
@@ -14,10 +15,10 @@ jobs:
   include:
     - stage: checker
       script: npm whoami
-    # - stage: test
-    #   script: 'npm run test'
-    # - stage: release-next
-    #   script: 'npm run release:next'
+    - stage: test
+      script: 'npm run test'
+    - stage: release-next
+      script: 'npm run release:next'
 branches:
   only:
     - develop
