--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -24,10 +24,14 @@
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
+    "minimist": "^1.2.0",
     "pug": "^2.0.3",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
     "webpack-dev-middleware": "^3.5.2"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^5.0.5"
   }
 }
