--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.3",
   "private": true,
   "dependencies": {
+    "@material/mwc-icon": "^0.3.6",
+    "@material/mwc-button": "^0.3.6",
     "@pie-ui/calculator": "^3.3.1",
     "@pie-ui/categorize": "^0.8.1",
     "@pie-ui/extended-text-entry": "^2.4.1",
