--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.0",
-    "@pie-framework/build-helper": "^1.1.1",
+    "@pie-framework/build-helper": "^1.2.1",
     "@pie-lib/test-utils": "0.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -37,6 +37,7 @@
     "jest": "^22.4.3",
     "lerna": "^3.11.0",
     "minimist": "^1.2.0",
+    "now": "^13.1.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
