--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lerna": "^3.11.0",
     "minimist": "^1.2.0",
     "now": "^13.1.3",
+    "opn": "^5.4.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
