--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
   - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" >> .npmrc
   - git config --global user.email "travis@travis-ci.org"
   - git config --global user.name "Travis CI"
+  - git remote set-url origin https://${GITHUB_TOKEN}@github.com/pie-framework/pie-ui.git
 
 stages:
   # - test
@@ -25,7 +26,7 @@ jobs:
     - stage: build-and-deploy-dev
       script: 'npm run build:demo && npm run deploy:demo:dev'
     - stage: build-release-deploy
-      script: 'yarn build && npm run release && npm run deploy:demo'
+      script: 'yarn build && npm run release && npm run build:demo && npm run deploy:demo'
 
 branches:
   only:
