--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
-    "release": "npm run clean && npm test && npm run build && lerna publish --conventional-commits",
+    "release": "npm run clean && npm test && npm run build && lerna publish --conventional-commits --yes",
     "release:next": "npm run clean && npm test && npm run build && lerna publish --canary --yes --conventional-commits --preid next --dist-tag next",
     "lint": "lerna exec -- \\$LERNA_ROOT_PATH/node_modules/.bin/eslint  --ignore-path \\$LERNA_ROOT_PATH/.eslintignore --ext .js --ext .jsx src",
     "clean": "lerna exec -- rm -fr lib",
